content/docs/seclab/history/smparkin-iptables-working
# Generated by iptables-save v1.6.1 on Tue May 29 02:27:29 2018
*filter
:INPUT DROP [1109:59018]
:FORWARD ACCEPT [2643:1409995]
:OUTPUT ACCEPT [285:23018]
-A INPUT -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A INPUT -i lo -j ACCEPT
-A INPUT -i enp0s25 -p udp --dport 67:68 --sport 67:68 -j ACCEPT
-A INPUT -i enp1s0 -p tcp -m multiport --dports 22,80 -j ACCEPT
-A INPUT -i enp1s0 -p udp -m multiport --dports 53,67,69 -j ACCEPT
-A FORWARD -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A FORWARD -s 127.0.0.0/8 -j DROP
-A FORWARD -d 127.0.0.0/8 -j DROP
-A FORWARD -s 10.0.0.0/8 -i enp0s25 -j DROP
-A FORWARD -s 129.65.0.0/16 -i enp1s0 -j DROP
-A FORWARD -d 10.0.0.0/8 -i enp0s25 -j DROP
-A FORWARD -s 10.13.37.0/24 -d 10.13.37.0/24 -j DROP

COMMIT
# Completed on Tue May 29 02:27:29 2018
# Generated by iptables-save v1.6.1 on Tue May 29 02:27:29 2018
*nat
:PREROUTING ACCEPT [515:37557]
:INPUT ACCEPT [269:21503]
:OUTPUT ACCEPT [268:18260]
:POSTROUTING ACCEPT [192:12419]
-A POSTROUTING -o enp0s25 -j MASQUERADE
COMMIT
